# Europulse

./: .env.example  .gitignore  HANDOFF_v0.2.md  README.md  plan.md  pyproject.toml
assets/: sample_report.html
europulse/: config.py
europulse/alerts/: webhook.py
europulse/analysis/: alerts.py  forecast.py  regimes.py  risk.py
europulse/ingestion/: db.py  http.py  macro.py  nbp.py  prices.py  quality.py
europulse/llm/: client.py  synthesizer.py
europulse/rag/: embeddings.py  news.py  ticker_tagging.py
europulse/reporting/: html_generator.py  pdf_generator.py
europulse/ui/: app.py
scripts/: daily_report.py  fetch_news.py  generate_report.py  generate_screenshots.py  ingest_all.py
templates/: report_template.html
tests/: test_alerts.py  test_analysis.py  test_freshness.py  test_http_retry.py  test_ingestion.py  test_macro_since.py  test_nbp.py  test_news_since.py  test_prices_since.py  test_quality.py  test_rag.py  test_report_run.py  test_reporting.py  test_synthesizer.py  test_ui.py  test_webhook.py
