[project]
name = "europulse"
version = "0.1.0"
description = "European financial data intelligence platform"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.37",
    "pandas>=2.2.0",
    "duckdb>=0.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.0",
    "trafilatura>=1.9.0",
    "sentence-transformers>=2.7.0",
    "chromadb>=0.5.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.5.0",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "jinja2>=3.1.0",
    "structlog>=24.1.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "respx>=0.21.0", "ruff>=0.4.0"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
